2015-10-23 Nik Nyby <nikolas@gnu.org>
	* Converted LibreJS to use jpm instead of the old add-on
	system: cfx. Thanks to Adrian Aichner for helping out
	with this.

2015-10-22 Nik Nyby <nikolas@gnu.org>
	* Add some notes on working with the LibreJS codebase
	to the manual.

2015-10-15 Nik Nyby <nikolas@gnu.org>
	* Revert some commits that were causing problems. Thanks
	to Ruben for pointing these out.

2015-06-16 Nik Nyby <nikolas@gnu.org>
	* Add the WTFPL license to the list of accepted licenses.
	Thanks to CY for pointing out that it was missing.

	* Add LibreJS version number in the main addon panel.

	* Fixed a mangled Unicode character problem in
	process_response.js. Thanks to Jookia for the patch.

	* onDetermineCharset now only checks for valid charsets.
	Thanks to Ruben Rodriguez for the patch.

2015-04-02 Nik Nyby <nikolas@gnu.org>
	* Remove the draggable complain banner functionality.
	* Add JsChecker.isFreeLicensed method from Ruben Rodriguez. We're
	hoping this will lead to improved speed and memory usage in LibreJS.

2015-01-17 Nik Nyby <nikolas@gnu.org>
	* Include the Eclipse Public License in license definitions.
	Thanks to Daniel Ziltener for the patch.

	* Fixed a bug that caused the main panel to disappear after
	clicking the red "Whitelist" button on a script that wasn't
	accepted by LibreJS.

2014-12-06 Nik Nyby <nikolas@gnu.org>
	* You can now specify multiple licenses for a JavaScript file
	that's been compiled or concatenated from more than one source
	file. Info on how to do this is in the manual - search for
	"Specifying multiple licenses". Thanks to Arne Möhle for
	starting a discussion that led to this change.

2014-12-06 Nik Nyby <nikolas@gnu.org>
	* You can now move the "Complain" button out of the way if it's
	blocking something on the website you're looking at. Thanks to
	Alexandre Garreau for pointing out this problem.

2014-12-01 Nik Nyby <nikolas@gnu.org>
	* Applied a patch from Lutz Horn: updating the whitelisted