@@ -1,3 +1,7 @@
+2015-10-25 Nik Nyby <nikolas@gnu.org>
+	* Fixed a bug where @license-end was getting ignored
+	in some cases. Thanks to Micah Cowan for debugging this.
+
 2015-10-23 Nik Nyby <nikolas@gnu.org>
 	* Converted LibreJS to use jpm instead of the old add-on
 	system: cfx. Thanks to Adrian Aichner for helping out
